<resources>
    <string name="app_name">Number\'s Spellings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="Open">open</string>
    <string name="Close">close</string>

    <string name="equal">=\n=\n=\n=\n=\n=\n=\n=\n=\n=\n</string>
    <string name="table1to20">1\n2\n3\n4\n5\n6\n7\n8\n9\n10\n</string>
    <string name="table11to20">11\n12\n13\n14\n15\n16\n17\n18\n19\n20\n</string>
    <string name="table21to30">21\n22\n23\n24\n25\n26\n27\n28\n29\n30\n</string>
    <string name="table31to40">31\n32\n33\n34\n35\n36\n37\n38\n39\n40\n</string>
    <string name="table41to50">41\n42\n43\n44\n45\n46\n47\n48\n49\n50\n</string>
    <string name="table51to60">51\n52\n53\n54\n55\n56\n57\n58\n59\n60\n</string>
    <string name="table61to70">61\n62\n63\n64\n65\n66\n67\n68\n69\n70\n</string>
    <string name="table71to80">71\n72\n73\n74\n75\n76\n77\n78\n79\n80\n</string>
    <string name="table81to90">81\n82\n83\n84\n85\n86\n87\n88\n89\n90\n</string>
    <string name="table91to100">91\n92\n93\n94\n95\n96\n97\n98\n99\n100\n</string>
    <string name="OneToTen">One\nTwo\nThree\nFour\nFive\nSix\nSeven\nEight\nNine\nTen\n</string>
    <string name="EleToTwy">Eleven\nTwelve\nThirteen\nFourteen\nFifteen\nSixteen\nSeventeen\nEighteen\nNineteen\nTwenty\n</string>
    <string name="TwyOneToThry">Twenty-one\nTwenty-two\nTwenty-three\nTwenty-four\nTwenty-five\nTwenty-six\nTwenty-seven\nTwenty-eight\nTwenty-nine\nThirty\n</string>
    <string name="ThryOneTofoty">Thirty-one\nThirty-two\nThirty-three\nThirty-four\nThirty-five\nThirty-six\nThirty-seven\nThirty-eight\nThirty-nine\nForty\n</string>
    <string name="ForyOneTofity">Forty-one\nForty-two\nForty-three\nForty-four\nForty-five\nForty-six\nForty-seven\nForty-eight\nForty-nine\nFifty\n</string>
    <string name="FityOneToSixty">Fifty-one\nFifty-two\nFifty-three\nFifty-four\nFifty-five\nFifty-six\nFifty-seven\nFifty-eight\nFifty-nine\nSixty\n</string>
    <string name="SixOneToSevty">Sixty-one\nSixty-two\nSixty-three\nSixty-four\nSixty-five\nSixty-six\nSixty-seven\nSixty-eight\nSixty-nine\nSeventy\n</string>
    <string name="SevnOneToEity">Seventy-one\nSeventy-two\nSeventy-three\nSeventy-four\nSeventy-five\nSeventy-six\nSeventy-seven\nSeventy-eight\nSeventy-nine\nEighty\n</string>
    <string name="EityOneToNity">Eighty-one\nEighty-two\nEighty-three\nEighty-four\nEighty-five\nEighty-six\nEighty-seven\nEighty-eight\nEighty-nine\nNinety\n</string>
    <string name="NinOneToHun">Ninety-one\nNinety-two\nNinety-three\nNinety-four\nNinety-five\nNinety-six\nNinety-seven\nNinety-eight\nNinety-nine\nOne hundred\n</string>
    <string name="title_activity_black_board">black_board</string>
    <string name="title_activity_board">board</string>
    <string name="tikamkumar355_gmail_com">tikamkumar355@gmail.com</string>
    <string name="about">About</string>
    <string name="developer">Developer</string>
    <string name="exit">Exit</string>
    <string name="communicate">Communicate</string>
    <string name="more_apps">More Apps</string>
    <string name="share">Share</string>

    <string name="hi_my_name">Hi, My name is Tikam Kumar and I am the boy behind this app.</string>
    <string name="contact_me">If you have any questions or suggestions,do not hesitate to contact me.</string>
    <string name="launcher_icon">Launcher Icon</string>
    <string name="developer_s_signature">Developer\'s Signature</string>
    <string name="tikam_kumar">Tikam Kumar</string>
    <string name="back">back</string>
    <string name="background">Background</string>
    <string name="heading">Heading</string>
    <string name="table">table</string>
    <string name="duster">duster</string>
    <string name="chalk">Chalk</string>
    <string name="range_1_to_10">Range 1 to 10</string>
    <string name="range_11_to_20">Range 11 to 20</string>
    <string name="range_21_to_30">Range 21 to 30</string>
    <string name="range_31_to_40">Range 31 to 40</string>
    <string name="range_41_to_50">Range 41 to 50</string>
    <string name="range_51_to_60">Range 51 to 60</string>
    <string name="range_61_to_70">Range 61 to 70</string>
    <string name="range_71_to_80">Range 71 to 80</string>
    <string name="range_81_to_90">Range 81 to 90</string>
    <string name="range_91_to_100">Range 91 to 100</string>
    <string name="App_icon">Launcher icon</string>
    <string name="company_domain">Company Domain</string>

</resources>