<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include layout="@layout/content_main" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            tools:context="com.tikamkumar.numbersspellings.MainActivity"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.NumbersSpellings.AppBarOverlay">


                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@color/white"
                        app:popupTheme="@style/Theme.NumbersSpellings.PopupOverlay">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:shadowColor="#206200EA"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="2"
                            android:text="@string/app_name"
                            android:textColor="@color/Blue"
                            android:textSize="22sp"
                            android:textStyle="normal" />
                    </androidx.appcompat.widget.Toolbar>

                </com.google.android.material.appbar.AppBarLayout>
            </androidx.cardview.widget.CardView>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="InefficientWeight">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/OneTen"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/white"
                        android:contentDescription="@string/range_1_to_10"
                        android:src="@drawable/img" />

                    <ImageButton
                        android:id="@+id/Two"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@color/white"
                        android:contentDescription="@string/range_11_to_20"
                        android:src="@drawable/img_1" />

                    <ImageButton
                        android:id="@+id/Three"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@color/white"
                        android:contentDescription="@string/range_21_to_30"
                        android:src="@drawable/img_2" />

                    <ImageButton
                        android:id="@+id/Four"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@color/white"
                        android:contentDescription="@string/range_31_to_40"
                        android:src="@drawable/img_3" />

                    <ImageButton
                        android:id="@+id/five"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@color/white"
                        android:contentDescription="@string/range_41_to_50"
                        android:src="@drawable/img_4" />

                    <ImageButton
                        android:id="@+id/six"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@color/white"
                        android:contentDescription="@string/range_51_to_60"
                        android:src="@drawable/img_5" />

                    <ImageButton
                        android:id="@+id/seven"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@color/white"
                        android:contentDescription="@string/range_61_to_70"
                        android:src="@drawable/img_6" />

                    <ImageButton
                        android:id="@+id/eight"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@color/white"
                        android:contentDescription="@string/range_71_to_80"
                        android:src="@drawable/img_7" />

                    <ImageButton
                        android:id="@+id/Nine"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@color/white"
                        android:contentDescription="@string/range_81_to_90"
                        android:src="@drawable/img_8" />

                    <ImageButton
                        android:id="@+id/Ten"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/white"
                        android:contentDescription="@string/range_91_to_100"
                        android:src="@drawable/img_9" />
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#e2e2e2" />
        </LinearLayout>
    </FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>