<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tikamkumar.numbersspellings.Developer">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/Theme.NumbersSpellings.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/back"
                    android:src="@drawable/backspace"
                    app:tint="@color/Blue"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingStart="15dp"
                    android:shadowColor="#206200EA"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/developer"
                    android:textColor="@color/Blue"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="20dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/launcher_icon"
                    android:padding="20dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:shadowColor="#DDF4FF81"
                    android:shadowDx="3"
                    android:shadowRadius="3"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="23sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:shadowColor="#F4FF81"
                    android:shadowDx="0.5"
                    android:shadowDy="0.5"
                    android:shadowRadius="0.5"
                    android:text="@string/hi_my_name"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:shadowColor="#F4FF81"
                    android:shadowDx="0.5"
                    android:shadowDy="0.5"
                    android:shadowRadius="0.5"
                    android:text="@string/contact_me"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:shadowColor="#DDF4FF81"
                    android:shadowDx="1"
                    android:shadowRadius="1"
                    android:text="@string/tikamkumar355_gmail_com"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/signature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="40dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/developer_s_signature"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/signature"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="40dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="cursive"
                        android:rotation="-6"
                        android:shadowColor="#00FCF2CC"
                        android:shadowDx="1"
                        android:shadowRadius="1"
                        android:text="@string/tikam_kumar"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</LinearLayout>